# ZeroPay

./: .dockerignore  .env-template  .gitignore  .gitmodules  API.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  config.toml  config.toml-example  docker-compose.yml  x402.md
.github/workflows/: docker-publish.yml  pr-check.yml
api/: Cargo.toml
api/.sqlx/: query-02bba765f25089532d7dbeeb260809490269a8be42511f0387f244d592bf0bf9.json  query-0fee282b2c837a7b5d660f70fd58d941007b63c1bd3a586408498f73920b3c1a.json  query-1264fff8fb677367b60774dfaeae0684713382a62276fc6bb11202ac46c6f321.json  query-1875eb8a3190bdf8c649a9bc96279189b7dbc2d2daf69398bc2057e7fce0bedf.json  query-402ee5d535eb95598a945c6482d31939c867d433faa1f138af006fa8b482dd34.json  query-700c2007b553b3a3b1cf524dac44ae209744b462e94a5bb3736f1396e6744ac7.json  query-795b8b26156cafe233a7b68b898d94d7ddf12d9f28718bb4a78301ab0fe9674d.json  query-85ee10dbe0cb5d677ff4e323a4550ad339812d2ea519b1da491634bcac800faf.json  query-8886c45e919132f4a5ae16586f74feb22b151c1292fb2e3a6bca72f6d2c97b67.json  query-9e78a46177fc3f836ab7b74fd2081b8d435949d5c12bfb5b646e675c640d6d45.json  query-b7018d65009ff22af5d1ab1141240fa983557e90d71bcc19a613850c8956d756.json  query-ba909ec779e2dbce5a6e3dffe091b8deb0d2687b8d9e8fcba4057af7b002e266.json  query-bf92021ccff92b22e7b16e2859e80c0303a83784fa875d3f28c01504737730d6.json  query-c253df1952333a2cd0948c8ef374b279d3c4c2d359f3154461fbe7fdb1498890.json  query-c778142486f208998e9103df15271bdd2e1e7c5076038b015cdd194b8e435394.json  query-e0fe0ff04343742c65ec85c5b0b659ed335bbd7e85ce617b66304c8a87ebb009.json  query-e1975e67ef7b791164bdb02e66b07037d4a053b202e4dd4c2ee63612922e9aea.json
api/migrations/: 20250919082500_customers.down.sql  20250919082500_customers.up.sql  20250919085005_chains.down.sql  20250919085005_chains.up.sql
api/src/: api.rs  main.rs
api/src/models/: chain.rs  customer.rs  deposit.rs  mod.rs  session.rs
docs/: AI_INTEGRATION_GUIDE.md  API_DOCUMENTATION.md
examples/: siwe_sign.rs
migrations/: 20250919082052_merchants.up.sql  20250919084941_deposits.up.sql  20250923030037_sessions.up.sql
scanner/: Cargo.toml  Subscription.json
scanner/src/: did.rs  event.rs  evm.rs  lib.rs
scanner/src/evm/: mod.rs  pay.rs  sub.rs
service/: config.toml
service/migrations/: 20250919082052_merchants.down.sql  20250919082500_customers.up.sql
service/src/: error.rs  main.rs
src/: auth.rs  did.rs  main.rs
src/chain/: evm.rs  mod.rs
src/controllers/: api.rs  merchant.rs
src/models/: chain.rs  deposit.rs  mod.rs  session.rs
website/: .env.example  .eslintrc.cjs  .gitignore  App.jsx  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
website/src/: index.css
x402/: Cargo.toml  EIP3009.json
x402/src/: axum.rs  client.rs  facilitator.rs  (+1 more)
(+9 files in other folders)
