[package]
name = "zero-pay"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0"
anyhow = "1.0"
rand = "0.8"
redis = { version = "0.32", features = ["tokio-comp"] }
axum = { version = "0.8", features = ["json", "macros"] }
blake3 = "1.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"
hex = "0.4"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
siwe = { version = "0.6", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
tdn_did = { git = "https://github.com/cympletech/tdn.git" }
tokio = { version = "1.44", features = ["full"] }
toml = "0.9.7"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }