[workspace]
members = [ "scanner", "api", "x402"]
resolver = "2"

[workspace.dependencies]
scanner = { path = "scanner", version = "0.1" }
alloy = "1.0"
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"
hex = "0.4"
hmac = "0.12"
redis = { version = "0.32", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
tdn_did = { git = "https://github.com/cympletech/tdn.git" }
tokio = { version = "1.44", features = ["full"] }
toml = "0.9.7"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
